--- a/config/secrets.yml
+++ b/config/secrets.yml
@@ -1,5 +1,7 @@
 default: &default
   secret_key_base: <%= ENV["SECRET_KEY_BASE"] %>
+  twitter_consumer_key: <%= ENV["TWITTER_CONSUMER_KEY"]%>
+  twitter_consumer_secret: <%= ENV["TWITTER_CONSUMER_SECRET"]%>
 
 development:
   <<: *default
