--- a/.env
+++ b/.env
@@ -1,4 +1,3 @@
-# https://github.com/ddollar/forego
 ASSET_HOST=localhost:3000
 APPLICATION_HOST=localhost:3000
 PORT=3000
@@ -11,3 +10,6 @@ SMTP_DOMAIN=example.com
 SMTP_PASSWORD=password
 SMTP_USERNAME=username
 WEB_CONCURRENCY=1
+TWITTER_CONSUMER_KEY=ZM1h6f9Pf0oD4TC9Kvb83Y0Js
+TWITTER_CONSUMER_SECRET=MkefJyeNFR9VkAnZiBzsLzh5Nakl9rdMd1P1vtsuAUMSp71pAX
+
